# merikens-tripcode-engine

./: .gitignore  BuildAll.sh  README.md
BoostPackages/: BuildBoostForVisualStudio.bat
CMake/: CMakeLists.txt
Cygwin/: patterns.txt
MerikensTripcodeEngine/: MERIKENsTripcodeEngine.vcxproj  MERIKENsTripcodeEngine.vcxproj.filters  MerikensTripcodeEngine.sln  MerikensTripcodeEngine.vcxproj
MerikensTripcodeEngine/Release/: patterns.txt
MerikensTripcodeEngine/Release/OpenCL/: MTE_OpenCL_DES.cl  MTE_OpenCL_SHA-1.cl  OpenCL10.cl  OpenCL10_AMD_pre-GCN.cl  OpenCL10_fewer_registers.cl  OpenCL12.cl  OpenCL12_AMD_pre-GCN.cl
MerikensTripcodeEngine/Source Files/: CPU10.cpp  CPU10.h  CPU10_AVX2.cpp  CPU10_SSE2Intrinsics.cpp  CPU10_x64_AVX.asm  CPU10_x64_AVX2.asm  CPU10_x64_SSE2.asm  CPU10_x64_SSE2_Nehalem.asm  CPU10_x86_AVX.asm  CPU10_x86_AVX2.asm  CPU10_x86_SSE2.asm  CPU10_x86_SSE2_Nehalem.asm  CPU12.cpp  CPU12_SSE2Intrinsics.cpp  CPU12_x64_AVX.asm  CPU12_x64_AVX2.asm  CPU12_x64_SSE2.asm  CPU12_x64_SSE2_Nehalem.asm  CPU12_x86_AVX.asm  CPU12_x86_AVX2.asm  CPU12_x86_Nehalem.asm  CPU12_x86_SSE2.asm  CUDA10.cu  CUDA10_Registers.cu  CUDA10_Registers_Kernel.h  CUDA10_Registers_KernelLauncher0.cu  CUDA10_Registers_KernelLauncher1.cu  CUDA10_Registers_KernelLauncher2.cu  CUDA10_Registers_KernelLauncher3.cu  CUDA10_Registers_KernelLauncher4.cu  CUDA10_Registers_KernelLauncher5.cu  CUDA10_Registers_KernelLauncher6.cu  CUDA10_Registers_KernelLauncher7.cu  CUDA10_Registers_Kernel_Common.h  CUDA10_SharedMemory.cu  CUDA12.cu  Constants.h  MERIKENsTripcodeEngine.h  MTE_CPU_DES.cpp  MTE_CPU_DES_Crypt25_x64_AVX.asm  (+38 more)
MerikensTripcodeEngine/Source Files/CUDA10Attic/: CUDA10.cu  CUDA10.h  CUDA104Threads.cu  CUDA10Current.cu  CUDA10Kernel.h  CUDA10KernelCommon.h  CUDA10KernelLauncher0.cu  CUDA10KernelLauncher1.cu  CUDA10KernelLauncher2.cu  CUDA10KernelLauncher3.cu  CUDA10KernelLauncher4.cu  CUDA10KernelLauncher5.cu  CUDA10KernelLauncher6.cu  CUDA10KernelLauncher7.cu  CUDA10Unrolled1Thread.cu  CUDA10Unrolled1ThreadMacros.cu  CUDA10Unrolled4Threads.cu  CUDA10Unrollled.cu
MerikensTripcodeEngine/Source Files/CUDA10_Registers_MultipleKernels/: CUDA10_Registers_KernelLauncher0.cu  CUDA10_Registers_KernelLauncher1.cu  CUDA10_Registers_KernelLauncher10.cu  CUDA10_Registers_KernelLauncher11.cu  CUDA10_Registers_KernelLauncher12.cu  CUDA10_Registers_KernelLauncher13.cu  CUDA10_Registers_KernelLauncher14.cu  CUDA10_Registers_KernelLauncher15.cu  CUDA10_Registers_KernelLauncher2.cu  CUDA10_Registers_KernelLauncher3.cu  CUDA10_Registers_KernelLauncher4.cu  CUDA10_Registers_KernelLauncher5.cu  CUDA10_Registers_KernelLauncher6.cu  CUDA10_Registers_KernelLauncher7.cu  CUDA10_Registers_KernelLauncher8.cu  CUDA10_Registers_KernelLauncher9.cu
SourceFiles/: CPU10.cpp  CPU10.h  CPU10_AVX2.cpp  CPU10_SSE2Intrinsics.cpp  CPU10_yasm.cpp  CPU12.cpp  CPU12_SSE2Intrinsics.cpp  CPU12_yasm.cpp  CUDA10_SharedMemory.cu  Constants.h  MERIKENsTripcodeEngine.h  Macros.h  Main.cpp  MerikensTripcodeEngine.h  OpenCL10.cpp  OpenCL12.cpp  Patterns.cpp  Testing.cpp  Types.h  UtilityFunctions.cpp
SourceFiles/elfio/: elfio.hpp  elfio_segment.hpp
VisualStudio/: MERIKENsTripcodeEngine.vcxproj.filters  MerikensTripcodeEngine.vcxproj
VisualStudio/Win32/Release/: Main.asm  Verification10.asm  VerificationDuplicates.asm
VisualStudio/Win32/Release_English/: CPU10.asm  CPU10_AVX2.asm  CPU12.asm  Main.asm  Verification10.asm  Verification12.asm
VisualStudio/x64/Release/: CPU12.asm  Main.asm  Verification10.asm  Verification12.asm  VerificationDuplicates.asm
VisualStudio/x64/Release_English/: CPU10.asm  CPU10_AVX2.asm  Main.asm  Verification10.asm  Verification12.asm  VerificationDuplicates.asm
mpir/: mpir-2.6.0.tar.bz2
mpir/Win32/: mpir.lib
mpir/x64/: mpir.lib
mpir/x86/: mpir.lib
